parser/jql_parser.go
// Code generated from JQLParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // JQLParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type JQLParser struct {
	*antlr.BaseParser
}

var jqlparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func jqlparserParserInit() {
	staticData := &jqlparserParserStaticData
	staticData.literalNames = []string{
		"", "'('", "')'", "','", "'['", "']'", "'!'", "'<'", "'>'", "'>='",
		"'<='", "'='", "'!='", "'~'", "'!~'",
	}
	staticData.symbolicNames = []string{
		"", "LPAREN", "RPAREN", "COMMA", "LBRACKET", "RBRACKET", "BANG", "LT",
		"GT", "GTEQ", "LTEQ", "EQUALS", "NOT_EQUALS", "LIKE", "NOT_LIKE", "IN",
		"IS", "AND", "OR", "NOT", "EMPTY", "WAS", "CHANGED", "BEFORE", "AFTER",
		"FROM", "TO", "ON", "DURING", "ORDER", "BY", "ASC", "DESC", "POSNUMBER",
		"NEGNUMBER", "CUSTOMFIELD", "RESERVED_WORD", "STRING", "MATCHWS", "ERROR_RESERVED",
		"ERRORCHAR", "QUOTE_STRING", "UNCLOSED_QUOTE_STRING", "INVALID_QUOTE_STRING",
		"SQUOTE_STRING", "UNCLOSED_SQUOTE_STRING", "INVALID_SQUOTE_STRING",
	}
	staticData.ruleNames = []string{
		"jqlQuery", "jqlWhere", "jqlOrClause", "jqlAndClause", "jqlNotClause",
		"jqlSubClause", "jqlTerminalClause", "jqlTerminalClauseRhs", "jqlEqualsOperator",
		"jqlLikeOperator", "jqlComparisonOperator", "jqlInOperator", "jqlIsOperator",
		"jqlWasOperator", "jqlWasInOperator", "jqlChangedOperator", "jqlField",
		"jqlFieldProperty", "jqlCustomField", "jqlString", "jqlNumber", "jqlOperand",
		"jqlEmpty", "jqlValue", "jqlFunction", "jqlFunctionName", "jqlArgumentList",
		"jqlList", "jqlListStart", "jqlListEnd", "jqlPropertyArgument", "jqlArgument",
		"jqlWasPredicate", "jqlChangedPredicate", "jqlDatePredicateOperator",
		"jqlDateRangePredicateOperator", "jqlUserPredicateOperator", "jqlValuePredicateOperator",
		"jqlPredicateOperand", "jqlOrderBy", "jqlSearchSort",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// JQLParserInit initializes any static state used to implement JQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewJQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func JQLParserInit() {
	staticData := &jqlparserParserStaticData
	staticData.once.Do(jqlparserParserInit)
}

// NewJQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewJQLParser(input antlr.TokenStream) *JQLParser {
	JQLParserInit()
	this := new(JQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &jqlparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "JQLParser.g4"

	return this
}

// JQLParser tokens.
const (
	JQLParserEOF                    = antlr.TokenEOF
	JQLParserLPAREN                 = 1
	JQLParserRPAREN                 = 2
	JQLParserCOMMA                  = 3
	JQLParserLBRACKET               = 4
	JQLParserRBRACKET               = 5
	JQLParserBANG                   = 6
	JQLParserLT                     = 7
	JQLParserGT                     = 8
	JQLParserGTEQ                   = 9
	JQLParserLTEQ                   = 10
	JQLParserEQUALS                 = 11
	JQLParserNOT_EQUALS             = 12
	JQLParserLIKE                   = 13
	JQLParserNOT_LIKE               = 14
	JQLParserIN                     = 15
	JQLParserIS                     = 16
	JQLParserAND                    = 17
	JQLParserOR                     = 18
	JQLParserNOT                    = 19
	JQLParserEMPTY                  = 20
	JQLParserWAS                    = 21
	JQLParserCHANGED                = 22
	JQLParserBEFORE                 = 23
	JQLParserAFTER                  = 24
	JQLParserFROM                   = 25
	JQLParserTO                     = 26
	JQLParserON                     = 27
	JQLParserDURING                 = 28
	JQLParserORDER                  = 29
	JQLParserBY                     = 30
	JQLParserASC                    = 31
	JQLParserDESC                   = 32
	JQLParserPOSNUMBER              = 33
	JQLParserNEGNUMBER              = 34
	JQLParserCUSTOMFIELD            = 35
	JQLParserRESERVED_WORD          = 36
	JQLParserSTRING                 = 37
	JQLParserMATCHWS                = 38
	JQLParserERROR_RESERVED         = 39
	JQLParserERRORCHAR              = 40
	JQLParserQUOTE_STRING           = 41
	JQLParserUNCLOSED_QUOTE_STRING  = 42
	JQLParserINVALID_QUOTE_STRING   = 43
	JQLParserSQUOTE_STRING          = 44
	JQLParserUNCLOSED_SQUOTE_STRING = 45
	JQLParserINVALID_SQUOTE_STRING  = 46
)

// JQLParser rules.
const (
	JQLParserRULE_jqlQuery                      = 0
	JQLParserRULE_jqlWhere                      = 1
	JQLParserRULE_jqlOrClause                   = 2
	JQLParserRULE_jqlAndClause                  = 3
	JQLParserRULE_jqlNotClause                  = 4
	JQLParserRULE_jqlSubClause                  = 5
	JQLParserRULE_jqlTerminalClause             = 6
	JQLParserRULE_jqlTerminalClauseRhs          = 7
	JQLParserRULE_jqlEqualsOperator             = 8
	JQLParserRULE_jqlLikeOperator               = 9
	JQLParserRULE_jqlComparisonOperator         = 10
	JQLParserRULE_jqlInOperator                 = 11
	JQLParserRULE_jqlIsOperator                 = 12
	JQLParserRULE_jqlWasOperator                = 13
	JQLParserRULE_jqlWasInOperator              = 14
	JQLParserRULE_jqlChangedOperator            = 15
	JQLParserRULE_jqlField                      = 16
	JQLParserRULE_jqlFieldProperty              = 17
	JQLParserRULE_jqlCustomField                = 18
	JQLParserRULE_jqlString                     = 19
	JQLParserRULE_jqlNumber                     = 20
	JQLParserRULE_jqlOperand                    = 21
	JQLParserRULE_jqlEmpty                      = 22
	JQLParserRULE_jqlValue                      = 23
	JQLParserRULE_jqlFunction                   = 24
	JQLParserRULE_jqlFunctionName               = 25
	JQLParserRULE_jqlArgumentList               = 26
	JQLParserRULE_jqlList                       = 27
	JQLParserRULE_jqlListStart                  = 28
	JQLParserRULE_jqlListEnd                    = 29
	JQLParserRULE_jqlPropertyArgument           = 30
	JQLParserRULE_jqlArgument                   = 31
	JQLParserRULE_jqlWasPredicate               = 32
	JQLParserRULE_jqlChangedPredicate           = 33
	JQLParserRULE_jqlDatePredicateOperator      = 34
	JQLParserRULE_jqlDateRangePredicateOperator = 35
	JQLParserRULE_jqlUserPredicateOperator      = 36
	JQLParserRULE_jqlValuePredicateOperator     = 37
	JQLParserRULE_jqlPredicateOperand           = 38
	JQLParserRULE_jqlOrderBy                    = 39
	JQLParserRULE_jqlSearchSort                 = 40
)

// IJqlQueryContext is an interface to support dynamic dispatch.
type IJqlQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	JqlWhere() IJqlWhereContext
	JqlOrderBy() IJqlOrderByContext

	// IsJqlQueryContext differentiates from other interfaces.
	IsJqlQueryContext()
}

type JqlQueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJqlQueryContext() *JqlQueryContext {
	var p = new(JqlQueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JQLParserRULE_jqlQuery
	return p
}

func (*JqlQueryContext) IsJqlQueryContext() {}

func NewJqlQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JqlQueryContext {
	var p = new(JqlQueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JQLParserRULE_jqlQuery

	return p
}

func (s *JqlQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *JqlQueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(JQLParserEOF, 0)
}

func (s *JqlQueryContext) JqlWhere() IJqlWhereContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlWhereContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlWhereContext)
}

func (s *JqlQueryContext) JqlOrderBy() IJqlOrderByContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlOrderByContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlOrderByContext)
}

func (s *JqlQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JqlQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JqlQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.EnterJqlQuery(s)
	}
}

func (s *JqlQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.ExitJqlQuery(s)
	}
}

func (p *JQLParser) JqlQuery() (localctx IJqlQueryContext) {
	this := p
	_ = this

	localctx = NewJqlQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JQLParserRULE_jqlQuery)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&19988778319938) != 0 {
		{
			p.SetState(82)
			p.JqlWhere()
		}

	}
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == JQLParserORDER {
		{
			p.SetState(85)
			p.JqlOrderBy()
		}

	}
	{
		p.SetState(88)
		p.Match(JQLParserEOF)
	}

	return localctx
}

// IJqlWhereContext is an interface to support dynamic dispatch.
type IJqlWhereContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	JqlOrClause() IJqlOrClauseContext

	// IsJqlWhereContext differentiates from other interfaces.
	IsJqlWhereContext()
}

type JqlWhereContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJqlWhereContext() *JqlWhereContext {
	var p = new(JqlWhereContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JQLParserRULE_jqlWhere
	return p
}

func (*JqlWhereContext) IsJqlWhereContext() {}

func NewJqlWhereContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JqlWhereContext {
	var p = new(JqlWhereContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JQLParserRULE_jqlWhere

	return p
}

func (s *JqlWhereContext) GetParser() antlr.Parser { return s.parser }

func (s *JqlWhereContext) JqlOrClause() IJqlOrClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlOrClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlOrClauseContext)
}

func (s *JqlWhereContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JqlWhereContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JqlWhereContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.EnterJqlWhere(s)
	}
}

func (s *JqlWhereContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.ExitJqlWhere(s)
	}
}

func (p *JQLParser) JqlWhere() (localctx IJqlWhereContext) {
	this := p
	_ = this

	localctx = NewJqlWhereContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JQLParserRULE_jqlWhere)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(90)
		p.JqlOrClause()
	}

	return localctx
}

// IJqlOrClauseContext is an interface to support dynamic dispatch.
type IJqlOrClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllJqlAndClause() []IJqlAndClauseContext
	JqlAndClause(i int) IJqlAndClauseContext
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode

	// IsJqlOrClauseContext differentiates from other interfaces.
	IsJqlOrClauseContext()
}

type JqlOrClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJqlOrClauseContext() *JqlOrClauseContext {
	var p = new(JqlOrClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JQLParserRULE_jqlOrClause
	return p
}

func (*JqlOrClauseContext) IsJqlOrClauseContext() {}

func NewJqlOrClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JqlOrClauseContext {
	var p = new(JqlOrClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JQLParserRULE_jqlOrClause

	return p
}

func (s *JqlOrClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *JqlOrClauseContext) AllJqlAndClause() []IJqlAndClauseContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IJqlAndClauseContext); ok {
			len++
		}
	}

	tst := make([]IJqlAndClauseContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IJqlAndClauseContext); ok {
			tst[i] = t.(IJqlAndClauseContext)
			i++
		}
	}

	return tst
}

func (s *JqlOrClauseContext) JqlAndClause(i int) IJqlAndClauseContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlAndClauseContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlAndClauseContext)
}

func (s *JqlOrClauseContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(JQLParserOR)
}

func (s *JqlOrClauseContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(JQLParserOR, i)
}

func (s *JqlOrClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JqlOrClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JqlOrClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.EnterJqlOrClause(s)
	}
}

func (s *JqlOrClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.ExitJqlOrClause(s)
	}
}

func (p *JQLParser) JqlOrClause() (localctx IJqlOrClauseContext) {
	this := p
	_ = this

	localctx = NewJqlOrClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, JQLParserRULE_jqlOrClause)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.JqlAndClause()
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == JQLParserOR {
		{
			p.SetState(93)
			p.Match(JQLParserOR)
		}
		{
			p.SetState(94)
			p.JqlAndClause()
		}

		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IJqlAndClauseContext is an interface to support dynamic dispatch.
type IJqlAndClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllJqlNotClause() []IJqlNotClauseContext
	JqlNotClause(i int) IJqlNotClauseContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode

	// IsJqlAndClauseContext differentiates from other interfaces.
	IsJqlAndClauseContext()
}

type JqlAndClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJqlAndClauseContext() *JqlAndClauseContext {
	var p = new(JqlAndClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JQLParserRULE_jqlAndClause
	return p
}

func (*JqlAndClauseContext) IsJqlAndClauseContext() {}

func NewJqlAndClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JqlAndClauseContext {
	var p = new(JqlAndClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JQLParserRULE_jqlAndClause

	return p
}

func (s *JqlAndClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *JqlAndClauseContext) AllJqlNotClause() []IJqlNotClauseContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IJqlNotClauseContext); ok {
			len++
		}
	}

	tst := make([]IJqlNotClauseContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IJqlNotClauseContext); ok {
			tst[i] = t.(IJqlNotClauseContext)
			i++
		}
	}

	return tst
}

func (s *JqlAndClauseContext) JqlNotClause(i int) IJqlNotClauseContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlNotClauseContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlNotClauseContext)
}

func (s *JqlAndClauseContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(JQLParserAND)
}

func (s *JqlAndClauseContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(JQLParserAND, i)
}

func (s *JqlAndClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JqlAndClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JqlAndClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.EnterJqlAndClause(s)
	}
}

func (s *JqlAndClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.ExitJqlAndClause(s)
	}
}

func (p *JQLParser) JqlAndClause() (localctx IJqlAndClauseContext) {
	this := p
	_ = this

	localctx = NewJqlAndClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, JQLParserRULE_jqlAndClause)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(100)
		p.JqlNotClause()
	}
	p.SetState(105)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == JQLParserAND {
		{
			p.SetState(101)
			p.Match(JQLParserAND)
		}
		{
			p.SetState(102)
			p.JqlNotClause()
		}

		p.SetState(107)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IJqlNotClauseContext is an interface to support dynamic dispatch.
type IJqlNotClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	JqlNotClause() IJqlNotClauseContext
	NOT() antlr.TerminalNode
	BANG() antlr.TerminalNode
	JqlSubClause() IJqlSubClauseContext
	JqlTerminalClause() IJqlTerminalClauseContext

	// IsJqlNotClauseContext differentiates from other interfaces.
	IsJqlNotClauseContext()
}

type JqlNotClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyJqlNotClauseContext() *JqlNotClauseContext {
	var p = new(JqlNotClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JQLParserRULE_jqlNotClause
	return p
}

func (*JqlNotClauseContext) IsJqlNotClauseContext() {}

func NewJqlNotClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *JqlNotClauseContext {
	var p = new(JqlNotClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JQLParserRULE_jqlNotClause

	return p
}

func (s *JqlNotClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *JqlNotClauseContext) JqlNotClause() IJqlNotClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlNotClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlNotClauseContext)
}

func (s *JqlNotClauseContext) NOT() antlr.TerminalNode {
	return s.GetToken(JQLParserNOT, 0)
}

func (s *JqlNotClauseContext) BANG() antlr.TerminalNode {
	return s.GetToken(JQLParserBANG, 0)
}

func (s *JqlNotClauseContext) JqlSubClause() IJqlSubClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlSubClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlSubClauseContext)
}

func (s *JqlNotClauseContext) JqlTerminalClause() IJqlTerminalClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJqlTerminalClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJqlTerminalClauseContext)
}

func (s *JqlNotClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *JqlNotClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *JqlNotClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.EnterJqlNotClause(s)
	}
}

func (s *JqlNotClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JQLParserListener); ok {
		listenerT.ExitJqlNotClause(s)
	}
}

func (p *JQLParser) JqlNotClause() (localctx IJqlNotClauseContext) {
	this := p
	_ = this

	localctx = NewJqlNotClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, JQLParserRULE_jqlNotClause)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(112)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case JQLParserBANG, JQLParserNOT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(108)
			_la = p.GetTokenStream().LA(1)

			if !(_la == JQLParserBANG || _la == JQLParserNOT) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(109)
			p.JqlNotClause()
		}

	case JQLParserLPAREN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(110)
			p.JqlSubClause()
		}
